Add a little more info about the values of enum constants. Mention that if the init-part is omitted, the first constant defined in an enum has integral value 1, and following constants increase in value by 1.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10752 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -267,7 +267,7 @@ Enumerated types are declared with the following syntax:
 enum-declaration-statement:
   `enum' identifier { enum-constant-list } ;
 
-enum-constant-list
+enum-constant-list:
   enum-constant
   enum-constant , enum-constant-list
 
@@ -280,7 +280,9 @@ init-part:
 
 An enumerated type defines a set of named constants.  These are
 associated with parameters of integral type.  Each enumerated type is
-a distinct type.
+a distinct type. If the \sntx{init-part} is omitted, the
+\sntx{enum-constant} has an integral value one higher than the previous
+\sntx{enum-constant} in the enum, with the first having the value \chpl{1}.
 
 \subsection{Class Types}
 \label{Class_Types}
