Add options to the spec Makefile to get better syntax error messages and to halt on errors.  Add pdf options to fill in title, author, subject when you press ctrl+d in Acrobat.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10766 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -12,7 +12,14 @@
 \usepackage[titles]{tocloft}
 \usepackage{ifpdf}
 \ifpdf
-\usepackage[pdftex,bookmarks,plainpages=false]{hyperref}
+\usepackage[pdftex,
+            bookmarks,
+            plainpages=false,
+            breaklinks,
+            pdftitle={Chapel Language Specification},
+            pdfauthor={Cray Inc, 411 First Ave S Suite 600, Seattle, WA 98104},
+            pdfsubject={Cascade High Productivity Language}
+           ]{hyperref}
 \else
 \usepackage[ps2pdf]{hyperref}
 \fi
