--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -18,7 +18,7 @@
             breaklinks,
             pdftitle={Chapel Language Specification},
             pdfauthor={Cray Inc, 411 First Ave S Suite 600, Seattle, WA 98104},
-            pdfsubject={Cascade High Productivity Language}
+            pdfsubject={Cray High Productivity Language}
            ]{hyperref}
 \else
 \usepackage[ps2pdf]{hyperref}
@@ -100,7 +100,7 @@
 \textheight 8.5in
 
 \makeindex
-\title{Chapel Language Specification 0.703 (internal)}
+\title{Chapel Language Specification 0.750}
 
 \author{Cray Inc\\
 411 First Ave S, Suite 600\\
