Add a few additional reductions to the reductions release example. It now uses a + reduction over slices of the array to compute norms of the colums and uses an && reduction to compute a bool that is true if all values in the array are larger than 0.25.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10772 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -20,7 +20,7 @@ demonstrate various Chapel features:
      linkedList.chpl        : generic linked list example
      norm.chpl              : sample module for computing array norms
      prodCons.chpl          : producer-consumer example using circular buffer
-     reductions.chpl        : finds the minimum and maximum values in an array
+     reductions.chpl        : applies several array reductions on a 2D array
      quicksort.chpl         : parallel quick sort using cobegin and serial
      slices.chpl            : examples of array slicing and reindexing
      sparse.chpl            : sparse domain/array tutorial example
